# CTGPM

./: README.md
DTmatch_n_BCTmatch/: Baseline.h  Basic.h  CMakeLists.txt  DataGraph.h  DependencyGraph.h  DisjointSetUnion.h  Fraction.h  MatchGraph.h  PatternGraph.h  SimBalancer.h  SimRunner-R.h  SimRunner.h  SubGraph.h  main.cpp  smallcase.cpp  syn.cpp
DTmatch_n_BCTmatch/src/: Base.hpp  Core.h  DependencyGraph.hpp  Fraction.hpp  MatchGraph.hpp  PatternGraph.hpp  SimBalancer.hpp  SimRunner.hpp
DTmatch_n_BCTmatch/test/: main.cpp
Match/src/: Baseline.hpp  DataGraph.hpp  DisjointSetUnion.hpp  SubGraph.hpp
PRE/: CMakeLists.txt  Generator2.java  Genetator1.java  TCquery.cpp  main.cpp  relabel.cpp  sort_edge.cpp  test.cpp
WTmatch/: Baseline.hpp  Basic.hpp  CMakeLists.txt  DataGraph.hpp  DependencyGraph.hpp  DisjointSetUnion.hpp  Fraction.hpp  MatchGraph.hpp  PatternGraph.hpp  SimRunner.hpp  main.cpp  main2.cpp
